autotests/syntax-tests-simple-refal/tests/negative/negative107.sref
Name { Name Name , Name Name : $FORWARD Name Name , : = : =
; = ; } ; 